<?xml version="1.0" encoding="utf-8"?>

<!-- PLEASE!!!!DO NOT CHANGE OR ADD ANY ATTRIBUTES HERE!!!!!!!!!!!
PLEASSSSSSSSSSSSSSSSSSSEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE!!!!!!!!!!!!!!!!-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".HomePageActivity">

    <TextView
        android:id="@+id/homepage_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#21b49d"
        android:text=" Home"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/search_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_below="@id/homepage_title">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="1dp"
            android:background="@null"
            android:inputType="text"
            android:maxLines="1"
            android:hint="Type to search..."
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="1dp"
            android:layout_weight="4" />

        <Button
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:text="Search"
            android:layout_marginTop="-5dp"
            android:layout_weight="1"
            android:textSize="9sp"
            android:id="@+id/hmpage_search_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/search_area"
        android:id="@+id/filter_options"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/category_sp"
            android:spinnerMode="dropdown"
            android:entries="@array/category"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:layout_height="40dp" />

        <Spinner
            android:id="@+id/search_sort"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:entries="@array/sort"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <!-- IMPORTANT TO ALLOW USER TO SCROLL THROUGH LISTS-->
    <ScrollView
        android:id="@+id/hmpage_results_scrollbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/homepage_buttons"
        android:layout_below="@id/filter_options">

        <LinearLayout
            android:id="@+id/hmpage_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/homepage_buttons"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_alignParentLeft="true">

        <Button
            android:id="@+id/nearby_item_btn"
            android:layout_width="1dp"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/home_post_btn"
            android:layout_width="1dp"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/home_settings_btn"
            android:layout_width="1dp"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>



</RelativeLayout>