<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="295dp"
        android:layout_marginLeft="100dp"
        android:background="#ffffff"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:layout_below="@+id/login_email_input"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/unitrade_new" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="140dp"
        android:layout_marginLeft="205dp"
        android:layout_height="45dp"
        android:background="@null"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button

        android:id="@+id/login_register_btn"
        android:layout_width="140dp"
        android:layout_marginLeft="45dp"
        android:layout_height="45dp"
        android:background="@null"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/login_resetPasswd_btn"
        android:layout_below="@id/login_password_input"
        android:layout_width="105dp"
        android:layout_height="20dp"
        android:layout_marginLeft="225dp"
        android:background="@null"/>

    <!-- Saving this for the next spring
    <Button
        android:id="@+id/login_sendEmailLink_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:text="send it again" />

    <TextView
        android:id="@+id/login_emailLink_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_sendEmailLink_btn"
        android:layout_alignParentStart="true"
        android:text="Not seeing our email?" />
    -->
</RelativeLayout>