...
            android:layout_width="328dp"
            android:layout_height="30dp"
            android:background="@null"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="18dp"
            android:layout_below="@id/settings_report"
            android:id="@+id/logout_setting_icon" />

        <ImageButton
            android:layout_width="328dp"
            android:layout_height="30dp"
            android:id="@+id/wishlist_setting_icon"
            android:layout_below="@id/logout_setting_icon"
...
